# Rivet

./: .gitignore  README.md  Rivet_HardHatC2.sln
RivetAsset/: Cargo.toml  README.md
RivetAsset/src/: main.rs
RivetAsset/src/functions/: lockHelper.rs  mod.rs
RivetAsset/src/models/: c2Message.rs  rustyMetadata.rs  rustyTaskResponseType.rs
RivetAsset/src/models/taskReturnTypes/: messageData.rs  mod.rs
RivetAsset/src/tasking/: mod.rs
RivetAsset/src/tasking/commands/: mod.rs
RivetAsset/src/tasking/processing/: mod.rs
Rivet_Asset/: Cargo.toml  LICENSE
Rivet_Asset/src/: main.rs
Rivet_Asset/src/comms/: base_comms.rs  http_comms.rs  mod.rs
Rivet_Asset/src/functions/: encryption.rs  serialization.rs
Rivet_Asset/src/models/: mod.rs  rustyMetadata.rs  rustyTask.rs  rustyTaskResult.rs  rustyTaskStatus.rs
Rivet_Asset/src/tasking/commands/: whoami.rs
Rivet_ClientPlugin/: RivetCommandCodeView.cs  RivetCommandValidation.cs  Rivet_ClientPlugin.csproj  Rivet_Creation_plugin.cs  Rivet_creation_comp.razor
Rivet_ServerPlugin/: Rivet_HandleComms_Base.cs  Rivet_ServerPlugin.csproj  Rivet_servicebase.cs
Rivet_ServerPlugin/Properties/: launchSettings.json
