[package]
name = "Rivet"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_delegate = "0.2.0"
reqwest = { version = "0.11.18", features = ["blocking","json"] }
serde = {version = "1.0.179", features = ["derive"]}
serde_json = "1.0.104"
serde_repr = "0.1.16"
shellwords = "1.1.0"
rust_syscalls = { git = "https://github.com/janoglezcampos/rust_syscalls", features = ["_INDIRECT_"] }
once_cell = "1.18.0"
dashmap = "5.5.0"
base64 = "0.21.2"
byteorder = "1.4.3"
bytes = "1.1.0"

[dependencies.chrono]
version = "0.4.26"

[dependencies.windows]
version = "0.48.0"
features =[
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
    "Win32_Security_Authentication_Identity",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Win32_System_SystemInformation",
    "Win32_Networking_ActiveDirectory",
    "Win32_NetworkManagement_NetManagement",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_ToolHelp"
]

[dependencies.clap]
version = "4.1.11"
features = ["derive"]

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]